new prevencion page

--- a/prevencion/prevencion.html
+++ b/prevencion/prevencion.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="../resources/css/styles.css">
+  <link rel="stylesheet" href="./prevencion.css">
 </head>
 
 <body>
@@ -19,7 +20,134 @@
     <navigation-menu></navigation-menu>
 
     <!-- content -->
-    <div id="content">N/A</div>
+    <div class="content">
+
+      <div class="row">
+        <div class="col cols-12">
+          <h2>Prevención del Dengue, Chikungunya y Zika</h2>
+        </div>
+      </div>
+
+      <br/><br/>
+      <div class="row">
+        <div class="col cols-12 center">
+          <img id="prevencion-01" src="./prevencion-01.png" alt="Prevención">
+        </div>
+      </div>
+
+      <br/><br/>
+      <div class="row">
+        <div class="col cols-4 center">
+          <img id="prevencion-02" src="./prevencion-02.png" alt="¿Sabías que?">
+        </div>
+        <div class="col cols-8">
+          <p>Son enfermedades virales provocadas por la picadura de mosquito hembra infectados, del género Aedes, principalmente del 'Aedes aegypt'.</p>
+          <p>No se transmite de persona a persona o a través de los animales, ni de objetos. Con excepción del Zika, que además se transmite a través de relaciones sexuales.</p>
+          <p>Las hembras con virus Dengue, Chikungunya y Zika depositan sus huevos en las paredes de diferentes recipientes pequeños, artificiales y con paredes lisas. Cuando estos recipientes se llenan con agua, los huevos eclosionan y nace el mosquito adulto. Por esto es fundamental practicar el descacharrado, para que no haya mosquitos adultos.</p>
+        </div>
+      </div>
+
+      <br/><br/>
+      <div class="row">
+        <div class="col cols-12 center">
+          <img id="prevencion-03" src="./prevencion-03.png" alt="Un poco de historia">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col cols-12">
+          <p>Zika recibe este nombre porque fue en el bosque de Zika de Uganda (África) en el que se aisló por primera vez -cerca de los años 50- en monos.</p>
+          <p>Chikunguña, su significado es doblarse de dolor. apareció por primera vez en Tanzania en 1952 y desde allí migró al resto de África y Asia.</p>
+          <p>Dengue cuyo nombre deriva de la frase <a href="http://es.wikipedia.org/wiki/Swahili">Swahili</a> (africana): “Ka-dinga pepo”, (enfermedad causada por un espíritu).  El primer registro potencial de un caso de dengue se cita en la medicina china entre los años 265 al 420.</p>
+        </div>
+      </div>
+
+      <br/><br/>
+      <div class="row">
+        <div class="col cols-7">
+          <p>Como no existen vacunas que prevengan el dengue ni medicamentos que lo curen la medida más importante de prevención es la eliminación de todos los criaderos de mosquitos, es decir, de todos los recipientes que contienen agua tanto en el interior de las casas como en sus alrededores.</p>
+        </div>
+        <div class="col cols-5">
+          <img id="prevencion-04" src="./prevencion-04.png" alt="Juntos podemos prevenir">
+        </div>
+      </div>
+
+      <br/><br/>
+      <div class="row">
+        <div class="col cols-12">
+          <ul>
+            <li class="list-group-item list-group-item-dark">
+              <span>Evitando la acumulación de agua estancada:</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Eliminando todos los recipientes en desuso que puedan acumular agua (como latas, botellas, neumáticos).</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Dando vuelta los objetos que se encuentran en el exterior y pueden acumular agua cuando llueve (baldes, palanganas, tambores).</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Cambiando el agua de bebederos de animales, colectores de desagües de aire acondicionado o lluvia, dentro y fuera de la casa, cada 3 días. Recordá frotar las paredes de los recipientes con una esponja a fin de desprender los huevos de mosquito que puedan estar adheridos.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Rellenando los floreros y portamacetas con arena húmeda.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Manteniendo los patios limpios y ordenados y los jardines desmalezados.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Limpiando canaletas y desagües de lluvia de los techos.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Tapando los tanques y recipientes que se usan para recolectar agua.</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col cols-12">
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-dark">
+              También es importante prevenir la picadura del mosquito:
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star small yellow"></i>
+              <span>Usando siempre repelentes siguiendo cuidadosamente las recomendaciones del envase.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Utilizando ropa clara que cubra los brazos y las piernas, especialmente durante las actividades al aire libre. 
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Colocando mosquiteros en puertas y ventanas, y cuando sea posible usar ventiladores o aire acondicionado en la habitaciones.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Protegiendo cunas y cochecitos de bebés con telas mosquiteras.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Utilizando repelentes ambientales como tabletas y espirales.</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col cols-12 center">
+          <img id="prevencion-05" src="./prevencion-05.png" alt="Ejemplos de acumulación de agua">
+        </div>
+      </div>
+
+    </div>
 
     <!-- share content -->
     <social-networks-share></social-networks-share>
@@ -29,10 +157,13 @@
 
   </div>
 
+    <!-- scroll reveal library -->
+    <script src="../resources/js/scrollreveal.4.0.6.js"></script>
+
     <!-- custom javascript -->
     <script src="../resources/webcomponents/navigation-menu.js"></script>
     <script src="../resources/webcomponents/social-networks-share.js"></script>
     <script src="../resources/webcomponents/footer-links.js"></script>
-
+    <script src="./prevencion.js"></script>
 </body>
 </html>
