upgrade of 'prevencion' page

--- a/prevencion/prevencion.html
+++ b/prevencion/prevencion.html
@@ -29,28 +29,85 @@
       </div>
 
       <br/><br/>
-      <div class="row">
+      <div id="row-prevencion" class="row">
         <div class="col cols-12 center">
-          <img id="prevencion-01" src="./prevencion-01.png" alt="Prevención">
+          <img id="img-prevencion" src="./img/prevencion.png" alt="Prevención">
         </div>
       </div>
 
       <br/><br/>
       <div class="row">
         <div class="col cols-4 center">
-          <img id="prevencion-02" src="./prevencion-02.png" alt="¿Sabías que?">
+          <img id="img-sabias-que" src="./img/sabias-que.png" alt="¿Sabías que?">
         </div>
         <div class="col cols-8">
-          <p>Son enfermedades virales provocadas por la picadura de mosquito hembra infectados, del género Aedes, principalmente del 'Aedes aegypt'.</p>
+          <p>Son enfermedades virales provocadas por la picadura de mosquito hembra infectados, del género Aedes, principalmente del "Aedes aegypt", como secundarios el "'Mosquito tigre' o 'Aedes albopictus'" y el "'Mosquito común' o 'Culex pipiens'".</p>
           <p>No se transmite de persona a persona o a través de los animales, ni de objetos. Con excepción del Zika, que además se transmite a través de relaciones sexuales.</p>
           <p>Las hembras con virus Dengue, Chikungunya y Zika depositan sus huevos en las paredes de diferentes recipientes pequeños, artificiales y con paredes lisas. Cuando estos recipientes se llenan con agua, los huevos eclosionan y nace el mosquito adulto. Por esto es fundamental practicar el descacharrado, para que no haya mosquitos adultos.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col cols-4 center">
+          <img id="img-especie-01" src="./img/especie-culex-pipiens.png" alt="Mosquito Culex Pipiens.">
+          <p class="note">Imagen: Mosquito Culex Pipiens.</p>
+        </div>
+        <div class="col cols-4 center">
+          <img id="img-especie-02" src="./img/especie-aedes-albopictus.png" alt="Mosquito Aedes Albopictus.">
+          <p class="note">Imagen: Mosquito Aedes Albopictus.</p>
+        </div>
+        <div class="col cols-4 center">
+          <img id="img-especie-03" src="./img/especie-aedes-aegypt.png" alt="Mosquito Aedes Aegypt.">
+          <p class="note">Imagen: Mosquito Aedes Aegypt.</p>
+        </div>
+      </div>
+
+      <br/><br/>
+      <div class="row">
+        <div class="col cols-4 center">
+          <img id="img-ciclo" src="./img/ciclo.png" alt="Ciclo del mosquito">
+        </div>
+        <div class="col cols-8">
+          <ul>
+            <li class="list-group-item list-group-item-dark">
+              <span>Ciclo reproductivo:</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>La hembra encuentra un recipinete con agua.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>La hembra pone los huevos sobre una pared firme.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Los huevos en contacto con el agua pasan al estado de larvas.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Las larvas viven y evolucionan en el agua entre 5 y 10 días.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Las larvas pasan al estado de pupas.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>De las pupas salen los mosquitos adultos.</span>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-star"></i>
+              <span>Los mosquitos se aparean y vuelve a iniciarse el ciclo.</span>
+            </li>
+          </ul>
         </div>
       </div>
 
       <br/><br/>
       <div class="row">
         <div class="col cols-12 center">
-          <img id="prevencion-03" src="./prevencion-03.png" alt="Un poco de historia">
+          <img id="img-historia" src="./img/historia.png" alt="Un poco de historia">
         </div>
       </div>
 
@@ -58,17 +115,17 @@
         <div class="col cols-12">
           <p>Zika recibe este nombre porque fue en el bosque de Zika de Uganda (África) en el que se aisló por primera vez -cerca de los años 50- en monos.</p>
           <p>Chikunguña, su significado es doblarse de dolor. apareció por primera vez en Tanzania en 1952 y desde allí migró al resto de África y Asia.</p>
-          <p>Dengue cuyo nombre deriva de la frase <a href="http://es.wikipedia.org/wiki/Swahili">Swahili</a> (africana): “Ka-dinga pepo”, (enfermedad causada por un espíritu).  El primer registro potencial de un caso de dengue se cita en la medicina china entre los años 265 al 420.</p>
+          <p>Dengue cuyo nombre deriva de la frase <a class="link" href="http://es.wikipedia.org/wiki/Swahili">Swahili</a> (africana): “Ka-dinga pepo”, (enfermedad causada por un espíritu).  El primer registro potencial de un caso de dengue se cita en la medicina china entre los años 265 al 420.</p>
         </div>
       </div>
 
       <br/><br/>
-      <div class="row">
+      <div id="row-juntos" class="row">
+        <div class="col cols-5 center">
+          <img id="img-slogan-juntos" src="./img/slogan-juntos.png" alt="Juntos podemos prevenir">
+        </div>
         <div class="col cols-7">
           <p>Como no existen vacunas que prevengan el dengue ni medicamentos que lo curen la medida más importante de prevención es la eliminación de todos los criaderos de mosquitos, es decir, de todos los recipientes que contienen agua tanto en el interior de las casas como en sus alrededores.</p>
-        </div>
-        <div class="col cols-5">
-          <img id="prevencion-04" src="./prevencion-04.png" alt="Juntos podemos prevenir">
         </div>
       </div>
 
@@ -112,6 +169,18 @@
       </div>
 
       <div class="row">
+        <div id="col-prevenir-agua-01" class="col cols-4 center">
+          <img id="img-prevenir-agua-01" src="./img/prevenir-agua-01.png" alt="Como prevenir acumulación de agua.">
+        </div>
+        <div id="col-prevenir-picadura" class="col cols-4 center">
+          <img id="img-prevenir-picadura" src="./img/prevenir-picadura.png" alt="Como prevenir picaduras.">
+        </div>
+        <div id="col-prevenir-agua-02" class="col cols-4 center">
+          <img id="img-prevenir-agua-02" src="./img/prevenir-agua-02.png" alt="Como prevenir acumulación de agua.">
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col cols-12">
           <ul class="list-group">
             <li class="list-group-item list-group-item-dark">
@@ -138,12 +207,6 @@
               <span>Utilizando repelentes ambientales como tabletas y espirales.</span>
             </li>
           </ul>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col cols-12 center">
-          <img id="prevencion-05" src="./prevencion-05.png" alt="Ejemplos de acumulación de agua">
         </div>
       </div>
 
