--- a/transmision/transmision.html
+++ b/transmision/transmision.html
@@ -36,7 +36,7 @@
 
       <div class="row">
         <div class="col cols-5 center">
-          <img id="transmision-01" src="./transmision-01.png" alt="">
+          <img id="mosquito-01" src="./img/mosquito-01.png" alt="Mosquito Aedes Albopictus.">
         </div>     
         <div class="col cols-7">
           <p>Esta especie se trata de un mosquito pequeño, con manchas blancas en las patas. Pica durante el día, siendo el período de alimentación más activo durante el amanecer y el atardecer.  Se cría en recipientes con agua estancada. No vuela más de 150 metros desde donde nació (aunque puede desplazarse a una distancia mayor si se encuentra dentro de un vehículo).</p>
@@ -48,7 +48,7 @@
           <p>El mosquito pica a una persona infectada e ingiere la sangre con el virus del dengue, el cual se incuba en el mosquito por un período de 8 a 12 días, después del cual el mosquito comienza a transmitir el virus, picando a otras personas. También puede ocurrir la transmisión mecánica, que sucede cuando el mosquito interrumpe la alimentación en una persona infectada y pasa a alimentarse inmediatamente en un huésped susceptible. Esta forma de transmisión no requiere la incubación de virus.</p>
         </div>
         <div class="col cols-4 center">
-          <img id="transmision-02" src="./transmision-02.png" alt="Mosquito Aedes Albopictus.">
+          <img id="mosquito-02" src="./img/mosquito-02.png" alt="Mosquito Aedes Albopictus.">
           <p class="note">Imagen: Mosquito Aedes Albopictus.</p>
         </div>
       </div>
@@ -62,7 +62,7 @@
 
       <div class="row">
         <div class="col cols-8 center">
-          <img id="transmision-03" src="./transmision-03.png" alt="Proceso de transmision de la enfermedad.">
+          <img id="transmision" src="./img/transmision.png" alt="Proceso de transmision de la enfermedad.">
           <p class="note">Imagen: Proceso de transmisión de la enfermedad.</p>
         </div>
         <div class="col cols-4">
