upgrade of 'prevencion' page

--- a/prevencion/prevencion.html
+++ b/prevencion/prevencion.html
@@ -24,11 +24,11 @@
 
       <div class="row">
         <div class="col cols-12">
-          <h2>Prevención del Dengue, Chikungunya y Zika</h2>
+          <h2>Prevención</h2>
         </div>
       </div>
 
-      <br/><br/>
+      <br/>
       <div id="row-prevencion" class="row">
         <div class="col cols-12 center">
           <img id="img-prevencion" src="./img/prevencion.png" alt="Prevención">
