Sintomas page and hospitales fix

--- a/sintomas/sintomas.html
+++ b/sintomas/sintomas.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="../resources/css/styles.css">
+  <link rel="stylesheet" href="./sintomas.css">
 </head>
 
 <body>
@@ -19,7 +20,243 @@
     <navigation-menu></navigation-menu>
 
     <!-- content -->
-    <div id="content">N/A</div>
+    <div id="content">
+      <div class="row">
+        <div class="col cols-12">
+          <h2>Síntomas</h2>
+        </div>
+      </div>
+
+      <br/>
+      <div id="row-prevencion" class="row">
+        <div class="col cols-12 center">
+          <img id="img-sintomas" src="./img/Titulo sintomas.png" alt="Síntomas">
+        </div>
+      </div>
+      <br/>
+      <div class="row">
+        <div class="col cols-12 center">
+          <h2 style="position: relative; display: inline-block; bottom: 40%;">Resumen</h2> 
+          <img id="img-resumen" src="./img/resumen.jpg" alt="Resumen">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col cols-12 center2">
+          <table class="resumen-table">
+            <tr>
+              <td>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-dark center">
+                    DENGUE
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star small yellow"></i>
+                    <span>Dolor de cabeza</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Dolor en articulaciones</span> 
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Dolor retroocular</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Manchas rojas</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Mareos</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Náuseas y vómitos</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Debilidad</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Pérdida de peso</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Fiebre alta</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Sangrado de nariz y encías</span>
+                  </li>
+                  <li class="list-group-item empty">
+                  </li>
+                  <li class="list-group-item empty">
+                  </li>
+                </ul>
+              </td>
+              <td>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-dark center">
+                    CHIKUNGUNYA
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star small yellow"></i>
+                    <span>Dolor de cabeza</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Dolores intensos en articulaciones de pies y manos</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Dolor muscular</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Conjuntivitis</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Fiebre alta</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Manchas rojas</span>
+                  </li>
+                  <li class="list-group-item empty">
+                  </li>
+                  <li class="list-group-item empty">
+                  </li>
+                  <li class="list-group-item empty">
+                  </li>
+                  <li class="list-group-item empty">
+                  </li>
+                  <li class="list-group-item empty">
+                  </li>
+                  <li class="list-group-item empty">
+                  </li>
+                </ul>
+              </td>
+              <td>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-dark center">
+                    ZIKA
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star small yellow"></i>
+                    <span>Dolor de cabeza</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Dolor en articulaciones</span> 
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Dolor de espalda</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Dolor muscular</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Ojos rojos</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Conjuntivitis</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Aftas</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Fiebre Baja</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Sensibilidad a la luz</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Picazón</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Fiebre alta</span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fa fa-star"></i>
+                    <span>Erupción con puntos blancos y rojos en la piel</span>
+                  </li>
+                </ul>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <br/><br/>
+      <div class="row">
+        <div class="col cols-12 center">
+          <img id="img-dengue" src="./img/Dengue.png" alt="Dengue">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col cols-12">
+          <p>Existen cuatro serotipos: DEN-1, DEN-2, DEN-3 y DEN-4, muy relacionados, todos pueden causar dengue clásico y dengue grave (antes llamado dengue hemorrágico).</p>
+          <p>El período de incubación es de 4 a 8 días, luego del cual comienzan las manifestaciones clínicas, aunque la mayoría de las personas cursan la infección de manera</p>
+          <p>asintomática o leve.</p>
+          <p>Las formas leves de la enfermedad presentan un cuadro febril agudo, de duración limitada (hasta una semana), la presencia de fiebre puede estar asociada a malestar general. 
+            En las formas clásicas, la fiebre está acompañada de cefalea, dolor retrorbital, dolor muscular y dolores articulares, malestar epigástrico, nauseas, vómitos astenia y postración. 
+            En la mitad de estos casos se presenta una erupción maculopapular.</p>
+          <p>Las formas graves (dengue grave) involucran manifestaciones hemorrágicas, con permeabilidad vascular aumentada, aumento del hematocrito, trombocitopenia, sangrados y presencia de 
+            derrame pleural, ascitis y derrame pericárdico, lo que puede llevar a un cuadro de shock. El desarrollo de la forma grave es más frecuente en personas que sufrieron dengue y se 
+            infectan (infección secundaria) con un serotipo diferente al de la primera infección. Sin embargo, puede ocurrir en la infección primaria, asociada a factores del hospedador, la 
+            virulencia de la cepa o a factores aún desconocidos.</p>
+        </div>
+      </div>
+      <br/>
+      <div class="row">
+        <div class="col cols-6">
+          <img id="img-sintomasytratamiento" src="./img/Sintomas dengue.png" alt="Sintomas y tratamiento">
+        </div>
+        <div class="col cols-6">
+          <img id="img-listasintomas" src="./img/Lista sintomas.png" alt="Lista sintomas">
+        </div>
+      </div>
+      <br/>
+      <div class="row">
+        <div class="col cols-12 center">
+          <img id="img-zika" src="./img/Zika.png" alt="Zika">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col cols-12">
+          <p>La infección por el virus Zika con una sintomatología similar que puede ser confundida con la infección por virus dengue, aunque puede presentarse en forma moderada o aguda, 
+            con un periodo de incubación de 3 a 12 días. Los síntomas son: fiebre, conjuntivitis no purulenta, dolor de cabeza, dolor corporal, dolor en articulaciones 
+            (principalmente manos y pies), decaimiento, sarpullido, e inflamación de miembros inferiores. Los síntomas duran entre 4 y 7 días.  Recientemente se ha asociado la infección 
+            por el virus Zika durante el embarazo con el nacimiento de niños con microcefalia. También se han presentado casos del síndrome Guillain Barré en pacientes infectados por el 
+            virus Zika. La transmisión por vía sexual se encuentra en discusión.</p>
+        </div>
+      </div>
+      <br/>
+      <div class="row">
+        <div class="col cols-12 center">
+          <img id="img-chikungunya" src="./img/Chikungunya.png" alt="Chikungunya">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col cols-12">
+          <p>La infección por el virus Chikungunya puede ser asintomática (en un bajo porcentaje) o puede causar una enfermedad de variada intensidad. La enfermedad puede evolucionar de 
+            forma aguda, subaguda o crónica. Luego de un período de incubación de entre 3 y 7 días, aparecen las manifestaciones clínicas: un inicio súbito de fiebre alta 
+            (típicamente mayor a 39°C) y dolor articular bilateral, simétrico, de intensidad variable que puede llegar a ser incapacitante. Otras manifestaciones pueden ser: náuseas, 
+            fatiga y erupción cutánea. La mayoría de los pacientes se recuperan completamente, pero en algunos casos los dolores articulares pueden durar varios meses, o incluso años. 
+            La enfermedad no se transmite de persona a persona, ni a través de objetos, ni por vía oral, respiratoria ni sexual. Los pacientes desarrollan inmunidad permanente.</p>
+        </div>
+      </div>
+    </div>
 
     <!-- share content -->
     <social-networks-share></social-networks-share>
@@ -33,6 +270,7 @@
     <script src="../resources/webcomponents/navigation-menu.js"></script>
     <script src="../resources/webcomponents/social-networks-share.js"></script>
     <script src="../resources/webcomponents/footer-links.js"></script>
+    <script src="sintomas.js"></script>
 
 </body>
 </html>
