--- a/sintomas/sintomas.html
+++ b/sintomas/sintomas.html
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="col cols-12 center2">
           <table class="resumen-table">
-            <tr>
+            <tr class="resumen-row">
               <td>
                 <ul class="list-group">
                   <li class="list-group-item list-group-item-dark center">
@@ -219,7 +219,7 @@
       </div>
       <br/>
       <div class="row">
-        <div class="col cols-6">
+        <div class="col cols-6 empty">
           <img id="img-sintomasytratamiento" src="./img/Sintomas dengue.png" alt="Sintomas y tratamiento">
         </div>
         <div class="col cols-6">
