--- a/sintomas/sintomas.html
+++ b/sintomas/sintomas.html
@@ -266,11 +266,14 @@
 
   </div>
 
+    <!-- scroll reveal library -->
+    <script src="../resources/js/scrollreveal.4.0.6.js"></script>
+    
     <!-- custom javascript -->
     <script src="../resources/webcomponents/navigation-menu.js"></script>
     <script src="../resources/webcomponents/social-networks-share.js"></script>
     <script src="../resources/webcomponents/footer-links.js"></script>
-    <script src="sintomas.js"></script>
+    <script src="./sintomas.js"></script>
 
 </body>
 </html>
