new homepage jumbotron

--- a/home/index.html
+++ b/home/index.html
@@ -27,9 +27,9 @@
 
     <!-- showcase -->
     <header class="showcase">
-      <h2>¡ Novedad !</h2>
-      <p>Autotest, Hospitales, Mapa de calor... Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique error, dolor ut maxime natus enim doloribus obcaecati nostrum! Reprehenderit officia neque quasi praesentium totam facilis consequuntur expedita nostrum, velit repellat.</p>
-      <a href="#" class="btn">Saber Mas<i class="fas fa-chevron-right"></i></a>
+      <!--<h2>¡ Novedad !</h2>-->
+      <!--<p>Autotest, Hospitales, Mapa de calor... Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique error, dolor ut maxime natus enim doloribus obcaecati nostrum! Reprehenderit officia neque quasi praesentium totam facilis consequuntur expedita nostrum, velit repellat.</p>-->
+      <!--<a href="#" class="btn">Saber Mas<i class="fas fa-chevron-right"></i></a>-->
     </header>
 
     <!-- news cards 01 -->
