--- a/nosotros/nosotros.html
+++ b/nosotros/nosotros.html
@@ -27,8 +27,8 @@
       </div>
 
       <div>
-        <p class="section-text">MISION: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem vero facilis tempora, eveniet, quidem laboriosam est quasi minus iste error odio, ex quaerat voluptatum nam pariatur esse minima modi repellendus non ab deleniti expedita nesciunt aperiam ad. Commodi, libero culpa debitis minus ex temporibus? Dolorem tempora a impedit cumque assumenda.</p>
-        <p class="section-text">VISION: Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ipsum esse ad quas non, beatae hic itaque sint voluptatum adipisci quisquam unde quo eaque neque incidunt explicabo a alias consectetur fugiat dicta aperiam quam. Optio eligendi unde nihil esse quasi ab dolor excepturi. Amet mollitia fugit magni ducimus harum nesciunt.</p>
+        <p class="section-text">MISION: Ayudar en la lucha contra el dengue, construyendo herramientas con información centralizada, accesible, amigable, innovadora, de confianza y de calidad.</p>
+        <p class="section-text">VISION: Informar y prevenir, reduciendo los efectos del dengue, dentro del ámbito de la República Argentina.</p>
         <p class="section-text">El presente proyecto surge dentro del contexto de la materia "Desarrollo de un Proyecto", Universidad CAECE, año 2020.</p>
       </div>
 
