adding mission & vission

--- a/nosotros/nosotros.html
+++ b/nosotros/nosotros.html
@@ -27,7 +27,7 @@
       </div>
 
       <div>
-        <p class="section-text">MISION: Ayudar en la lucha contra el dengue, construyendo herramientas con información centralizada, accesible, amigable, innovadora, de confianza y de calidad.</p>
+        <p class="section-text">MISION: Ayudar en la lucha contra el dengue, construyendo herramientas innovadoras con información centralizada, accesible, amigable, de confianza y de calidad.</p>
         <p class="section-text">VISION: Informar y prevenir, reduciendo los efectos del dengue, dentro del ámbito de la República Argentina.</p>
         <p class="section-text">El presente proyecto surge dentro del contexto de la materia "Desarrollo de un Proyecto", Universidad CAECE, año 2020.</p>
       </div>
