--- a/nosotros/nosotros.html
+++ b/nosotros/nosotros.html
@@ -39,7 +39,7 @@
       <div class="members">
 
         <div class="card">
-          <img src="../resources/img/integrantes/maria-claudia-abeledo.jpg" alt="Integrantes">
+          <img src="../resources/img/integrantes/maria-claudia-abeledo.jpeg" alt="Integrantes">
           <p class="name">Abeledo, María Claudia</p>
           <p class="position">Infraestructura</p>
         </div>
@@ -49,7 +49,7 @@
           <p class="position">Documentación</p>
         </div>
         <div class="card">
-          <img src="../resources/img/integrantes/emmanuel-carelli.jpg" alt="Integrantes">
+          <img src="../resources/img/integrantes/emmanuel-carelli.jpeg" alt="Integrantes">
           <p class="name">Carelli, Emmanuel</p>
           <p class="position">Desarrollo backend</p>
         </div>
@@ -59,7 +59,7 @@
           <p class="position">Documentación</p>
         </div>
         <div class="card">
-          <img src="../resources/img/integrantes/lucas-de-marsico.jpg" alt="Integrantes">
+          <img src="../resources/img/integrantes/lucas-de-marsico.jpeg" alt="Integrantes">
           <p class="name">De Marsico, Lucas</p>
           <p class="position">Investigación</p>
         </div>
@@ -89,7 +89,7 @@
           <p class="position">Desarrollo backend</p>
         </div>
         <div class="card">
-          <img src="../resources/img/integrantes/agustin-rodano.jpg" alt="Integrantes">
+          <img src="../resources/img/integrantes/agustin-rodano.jpeg" alt="Integrantes">
           <p class="name">Rodano, Agustin</p>
           <p class="position">Desarrollo frontend</p>
         </div>
@@ -99,7 +99,7 @@
           <p class="position">Desarrollo backend</p>
         </div>  
         <div class="card">
-          <img src="../resources/img/integrantes/adrian-zeami.jpg" alt="Integrantes">
+          <img src="../resources/img/integrantes/adrian-zeami.jpeg" alt="Integrantes">
           <p class="name">Zeami, Adrian</p>
           <p class="position">Investigación</p>
         </div>
